# webworker-rs

./: Cargo.toml  README.md
examples/hello_worker/: Cargo.toml  index.html  worker.js
examples/hello_worker/src/: lib.rs
src/: lib.rs
